# solp

./: .gitignore  .pre-commit-config.yaml  ARCHITEKTUR.md  LICENSE  README.md  TESTDOC.md  generate_architecture_doc.py  generate_docs.sh  generate_readme.py  generate_testdoc.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
lexer/: lexer.py
lexer/definitions/: keywords.py  operators.py
parser/: dispatcher.py  parser.py  token_stream.py
parser/rules/: constructor.py  contract.py  function.py  statement.py  variable.py
scripts/: generate_architecture_doc.py  generate_readme.py  generate_testdoc.py
solidity_ast/: nodes.py
solp/: __init__.py  solidity_parser.py  solidity_paser.py
solp/lexer/: lexer.py  token.py  token_types.py
solp/parser/: dispatcher.py  parser.py  token_stream.py
solp/solidity_ast/: nodes.py
solp/utils/: errors.py
test/lexer/: test_lexer_identifiers.py  test_lexer_keywords.py  test_lexer_numbers.py  test_lexer_strings.py  test_lexer_symbols.py  test_token.py
test/parser/: test_parser_call_statements.py  test_parser_function_body.py  test_parser_return.py  test_parser_variables.py
tests/lexer/: test_lexer_boolean.py  test_lexer_identifiers.py  test_lexer_keywords.py  test_lexer_numbers.py  test_lexer_operators.py  test_lexer_strings.py  test_lexer_symbols.py  test_token.py
tests/parser/: test_parser_call_statements.py  test_parser_contract.py  test_parser_function_body.py  test_parser_function_signature.py  test_parser_return.py  test_parser_variables.py  test_statement_rule.py
(+12 files in other folders)
