[project]
name = "solidity-parser-lib"
version = "0.1.0"
description = "Lexer/Parser/AST framework for Solidity in Python"
authors = [{ name = "Jens Bekersch" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["solp"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = [
    "solp",
    "lexer",
    "parser",
    "solidity_ast",
    "token_stream"
]

[tool.coverage.report]
show_missing = true

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
  "flake8",
  "black",
  "isort",
  "radon",
]